--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,14 +14,6 @@
         <item quantity="other">%d new</item>
     </plurals>
 
-    <string-array name="drawer_titles">
-        <item>Website</item>
-        <item>Vertretungsplan</item>
-        <item>Hausaufgabensystem</item>
-        <item>Klassenarbeiten</item>
-        <item>Mensa</item>
-        <!--<item>Einstellungen</item>-->
-    </string-array>
 
     <array name="drawer_icons">
         <item>@drawable/ic_apps</item>
@@ -31,14 +23,17 @@
         <item>@drawable/ic_community</item>
     </array>
 
-    <string-array name="footer_titles">
-        <item>Einstellungen</item>
-        <item>Feedback</item>
-    </string-array>
 
     <array name="footer_icons">
         <item>@drawable/ic_settings</item>
         <item>@drawable/ic_help</item>
     </array>
 
+    <string name="drawer_website">Website</string>
+    <string name="drawer_plan">Vertretungsplan</string>
+    <string name="drawer_tasks_system">Hausaufgabensystem</string>
+    <string name="drawer_class_jobs">Klassenarbeiten</string>
+    <string name="drawer_canteen">Mensa</string>
+    <string name="drawer_settings">Einstellungen</string>
+    <string name="drawer_feedback">Feedback</string>
 </resources>
